# BlueSky-Mastodon-CLI

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
licenses/: LICENSE.rst
social/: __init__.py  get_posts.py  main.py  send_post.py
