[metadata]
name = social
author = David Rodriguez
author_email = drodriguez@stsci.edu
license = BSD 3-Clause
license_files = licenses/LICENSE.rst
url = 
description = package for handling social media feeds
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
	Repository = 
	Documentation = 
keywords = software

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.9
setup_requires = setuptools_scm
install_requires =
  click>=8.1
  atproto>=0.0.29
  Mastodon.py>=1.8

[options.entry_points]
console_scripts =
    social = social.main:cli

